--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Hola Nombre</title>
+<script src="/style.js"></script>
+<!-- Enlace a Bootstrap CSS -->
+<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+<!-- Fuentes personalizadas -->
+<link href="https://fonts.googleapis.com/css2?family=Anta&display=swap" rel="stylesheet">
+
+<style>
+    /* Estilo para el fondo */
+    body {
+        background-color: black;
+    }
+
+    /* Estilo para el texto */
+    #saludo {
+        color: yellow; /* Color de texto amarillo */
+        font-size: 10em; /* Tamaño de texto */
+        font-family: 'Anta', sans-serif;
+    }
+</style>
+</head>
+<body class="d-flex justify-content-center align-items-center vh-100">
+
+<div class="text-center">
+    <h1 id="saludo" class="display-4">¡Hola nombre!</h1>
+    <button id="cambiarNombreBtn" class="btn btn-warning">¡Cambiar el nombre!</button>
+</div>
+
+</body>
+</html>
+
 
